stockroom 2/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: rohithns
spec:
  selector:
    app: frontend-depeloyement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
